--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 REACT_APP_CMS_URL = https://cms.wisniowasu.pl
+REACT_APP_TITLE = Wiśniowa SU | Samorząd Uczniowski
+REACT_APP_DESCRIPTION = Poznaj samorząd uczniowski z Technikum Mechatronicznego nr 1 w Warszawie, którego połączyła chęć zmian. Zobacz jaki jest samorząd na Wiśniowej 56!
