--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "react-transition-group": "^4.4.5",
     "react-vanilla-tilt": "^1.0.0",
     "sass": "^1.58.3",
     "scrollreveal": "^4.0.9",
+    "slick-carousel": "^1.8.1",
     "vanilla-tilt": "^1.8.0"
   },
   "scripts": {
